# cpp_programming_course

./: .gitmodules  CMakeLists.txt  build.bat  construct.cpp  googletest.cmake  main.cpp  objects.cpp
.github/workflows/: my-actions.yml  my-actions.yml.txt  utest_linux.yml  utest_windows.yml
math/: math_stuff.cpp
opp/: multidimensional.cpp
test/: CMakeLists.txt  test.cpp  test2.cpp
